Added GTests and configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,51 @@ project ("Directory Analizer" VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
+option(GTESTS_ENABLED "GTest Switch" OFF)
+
+if(GTESTS_ENABLED)
+    configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
+    execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+    RESULT_VARIABLE result
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+    if(result)
+      message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+    endif()
+    execute_process(COMMAND ${CMAKE_COMMAND} --build .
+      RESULT_VARIABLE result
+      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+    if(result)
+      message(FATAL_ERROR "Build step for googletest failed: ${result}")
+    endif()
+    
+    # Prevent overriding the parent project's compiler/linker
+    # settings on Windows
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    
+    # Add googletest directly to our build. This defines
+    # the gtest and gtest_main targets.
+    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
+                     ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
+                     EXCLUDE_FROM_ALL)
+    
+    # The gtest/gtest_main targets carry header search path
+    # dependencies automatically when using CMake 2.8.11 or
+    # later. Otherwise we have to add them here ourselves.
+    if (CMAKE_VERSION VERSION_LESS 2.8.11)
+      include_directories("${gtest_SOURCE_DIR}/include")
+    endif()
+
+    add_definitions(-GTESTS__ENABLED)
+endif()
+
 # Target named just as a CMakeTarget, it's not a public app so i use default name.
 add_executable (CMakeTarget "${PROJECT_SOURCE_DIR}/Directory Analizer/main.cpp")
+
+
+if(GTESTS_ENABLED)
+    # Link for GTests libraries
+    target_link_libraries(CMakeTarget gtest_main)
+endif()
 
 # Include sub-projects and directories
 add_subdirectory ("Directory Analizer")
@@ -53,6 +96,8 @@ foreach( file_i ${LIST_NEEDED_DLL})
 )
 endforeach( file_i )
 
+
+# Copy content from Graphics
 file(GLOB GRAPHICS
     "${PROJECT_SOURCE_DIR}/Directory Analizer/Graphics/Pngs/*.png"
 )
